crates/strider-analyze/tests/snapshots/v3__ppc32be__calling_convention__sink16.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "7" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v9" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v9" -> "7" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "12" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "12" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="const 0x100000024:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "14" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="StackStore u32\n→ ram[sp - 56]", shape=box3d, fillcolor="#20182a"];
  "16" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v17" -> "8" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "16" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "19" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v20" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v20" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="init\nr10", shape=Mdiamond, fillcolor="#1a3a5c"];
  "19" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "22" -> "19" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "19" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "19" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="init\nr9", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "25" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nr8", shape=Mdiamond, fillcolor="#1a3a5c"];
  "25" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "28" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nr7", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "31" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="init\nr6", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "34" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\nr5", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "37" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "39" -> "37" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v40" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v40" -> "37" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "3" -> "37" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "41" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v42" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v42" -> "39" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "43" -> "39" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "41" [label="StackStore u32\n→ ram[sp - 64]", shape=box3d, fillcolor="#20182a"];
  "44" -> "41" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v45" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v45" -> "41" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "14" -> "41" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "44" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "46" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "46" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "47" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "48" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "49" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "50" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="const 0x100000020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "47" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "51" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "52" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "52" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "52" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" -> "52" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "53" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "53" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "54" -> "53" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "54" [label="const 0x10000001c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "51" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "55" -> "51" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "56" -> "51" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "56" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "57" -> "56" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "57" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "57" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "58" -> "57" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "58" [label="const 0x100000018:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "55" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "59" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "61" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "61" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "61" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "62" -> "61" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "62" [label="const 0x100000014:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "59" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "63" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "65" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0x100000010:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "67" -> "63" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "68" -> "63" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "69" -> "68" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "69" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "70" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "70" [label="const 0x10000000c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "67" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "71" -> "67" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "72" -> "67" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "8" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "73" -> "72" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "73" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x100000008:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "71" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "75" -> "71" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "71" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "75" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "76" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "24" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "77" -> "76" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "27" -> "76" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "77" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "78" -> "77" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "30" -> "77" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "78" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "79" -> "78" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "78" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "79" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "80" -> "79" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "79" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "80" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "3" -> "80" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "4" -> "80" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
