crates/strider-analyze/tests/snapshots/v3__ppc32be__calling_convention__uses_return.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x10000d24:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x10020000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nr4", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "7" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "v11" [label="Post Call\nf1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v11" [color="#888888", style=dashed];
  "v11" -> "7" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nf2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v12" [color="#888888", style=dashed];
  "v12" -> "7" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "9" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "13" -> "9" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "9" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="const 0xfffffffe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" [label="Or:u32", shape=box, fillcolor="#2d2d2d"];
  "15" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "16" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "16" [label="ShiftRight:u32", shape=box, fillcolor="#2d2d2d"];
  "v17" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v17" [color="#888888", style=dashed];
  "v17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x1f:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="ShiftLeft:u32", shape=box, fillcolor="#2d2d2d"];
  "v17" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "20" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" -> "8" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v17" -> "8" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "1" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v22" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v22" -> "20" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "v17" -> "20" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "23" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nr4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="Store u32\n→ ram", shape=box3d, fillcolor="#102030"];
  "24" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "25" -> "2" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0x10020020:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "26" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "4" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "28" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "30" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "28" [label="StackStore u32\n→ ram[sp + 4]", shape=box3d, fillcolor="#20182a"];
  "31" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v32" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v32" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "33" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "33" [label="init\nLR", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "34" -> "31" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "31" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "23" -> "31" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
